src/objects/HQ_Sync_Error__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Malt Tables</fullName>
                </value>
                <value>
                    <fullName>GIR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offset__c</fullName>
        <label>Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Server_Name__c</fullName>
        <label>Server Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CommCareHQ</fullName>
                </value>
                <value>
                    <fullName>CommCareHQ India</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>HQ Sync Error</label>
    <nameField>
        <displayFormat>a-{000000}</displayFormat>
        <label>HQ Sync Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HQ Sync Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>